Tue Dec  7 23:40:30 CET 2004 (tk)
---------------------------------
  * configure: added --disable-zlib-vcheck (allows building on potentially
	       buggy zlib versions (1.2.0 & 1.2.1))

Tue Dec  7 19:25:06 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Ensure that the daily quarantine directory is created

Tue Dec  7 02:48:08 CET 2004 (tk)
---------------------------------
  * clamd: added support for file descriptor passing (patch by Richard Lyons
	   <frob-clamav*webcentral.com.au>)

Mon Dec  6 22:33:26 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Ensure the date is kept in the quarantine path

Sun Dec  5 15:00:35 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Fix array overrun on startup

Sat Dec  4 23:34:54 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Fix possible mishandling of multiple children when
				searching for a free server

Sat Dec  4 17:04:40 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Fixed filename handling in MACOS/X

Sat Dec  4 15:52:08 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle text/rfc822-headers incorrectly sent as
				message/rfc822-headers

Fri Dec  3 17:36:08 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	internal: Honour scanning modes and archive limits

Fri Dec  3 03:32:17 CET 2004 (tk)
---------------------------------
  * libclamav: attempt to rebuild PE structure from UPX compressed files
	       (code from aCaB)

Thu Dec  2 11:10:31 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	--internal now notices when the database has been
				updated

Wed Dec  1 22:29:33 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Added --internal flag (some functionality to do)
			SESSIONS: Don't hang when StreamMaxLength is hit

Wed Dec  1 21:05:07 CET 2004 (tk)
---------------------------------